# kreuzlaker

./: .gitignore  .gitlab-ci.yml  README.md
dbt/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-entrypoint.sh  profiles-prod.yml  pyproject.toml
dbt/xw_batch/: .sqlfluff  .sqlfluffignore  dbt_project.yml  packages.yml
dbt/xw_batch/models/datasets/: customer.sql  schema.yml
dbt/xw_batch/models/prep/: agg_journey_per_customer.sql  schema.yml
docs/: xw-batch-architecture.drawio
gitlab-aws-oidc/: README.md  cdk.json  package-lock.json  package.json
gitlab-aws-oidc/lib/: gitlab-aws-oidc-stack.ts
gitlab-aws-oidc/test/: gitlab-aws-oidc.test.ts
gitlab-aws-oidc/test/__snapshots__/: gitlab-aws-oidc.test.ts.snap
xw-batch/: .gitignore  Makefile  README.md  app.py  code-conventions.md  package-lock.json  package.json  requirements-dev.txt  requirements.txt  requirements.txt.in  setup.cfg
xw-batch/glue/business_logic/: __init__.py
xw-batch/glue/business_logic/convert/: __init__.py  journeys.py
xw-batch/glue/scripts/: convert_to_parquet.py
xw-batch/lambda/copyjob_for_example_data/: copyjob_for_example_data.py
xw-batch/lambdas/: __init__.py
xw-batch/lambdas/copyjob_for_s3_data/: copyjob_for_s3_data.py
xw-batch/tests/unit/: test_copy_s3_data.py  test_users_and_groups_structure.py  test_xw_batch_stack.py
xw-batch/tests/unit/__snapshots__/: test_copy_s3_data.ambr  test_users_and_groups_structure.ambr  (+1 more)
xw-batch/xw_batch/: copy_example_data.py  copy_s3_data.py  superset_docker.py  users_and_groups.py  vpc.py  xw_batch_stack.py
