[tool.poetry]
name = "dbt"
version = "0.1.0"
description = "dbt project for xw batch stack"
authors = ["Jan Katins <jan.katins@kreuzwerker.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dbt-athena-adapter = {git = "https://github.com/Tomme/dbt-athena.git"}

[tool.poetry.group.dev.dependencies]
sqlfluff-templater-dbt = "^1.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
