[tool.poetry]
name = "dbt"
version = "0.1.0"
description = "dbt project for xw batch stack"
authors = ["Jan Katins <jan.katins@kreuzwerker.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
# https://github.com/Tomme/dbt-athena/
#dbt-athena-adapter = { git = "https://github.com/Tomme/dbt-athena.git", rev="83f775643ab6e1edea605bc3f187ef28c2d20947"}
dbt-athena-adapter =  "^1.0.1"
# Needed in the docker entrypoint script for debugging
awscli = "^1.25.83"

[tool.poetry.group.dev.dependencies]
sqlfluff-templater-dbt = "^1.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py310']